# defer

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
include/: defer.h  scope_guard.h  unique.h
include/raii_utils/: defer.h  unique_handle.h
test/: CMakeLists.txt  test1.cc
